# libsndfile

./: .gitignore
src/: CMakeLists.txt  config.h  id3.c  mp3.c  mpeg_l3_encode.c  ogg.c  sndfile.c  sndfile.h
